2009-01-05  Guillem Jover  <guillem@debian.org>

	* man/start-stop-daemon.8: Clarify that the signal sent by default
	is TERM not KILL.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (signal_nr): Initialize with SIGTERM
	instead of literal 15.
	* man/start-stop-daemon.8: Refer to signal as TERM instead of
	literal 15.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (LOCALLIBDIR): Move macro to ...
	* dselect/Makefile.am (INCLUDES): ... here, as a -D argument.

	* lib/dpkg.h (DSELECT): Move macro to ...
	* dselect/dselect.h: ... here.

	* lib/dpkg.h (SPLITVERSION, SPLITPARTDEFMAX): Move macros to ...
	* dpkg-split/dpkg-split.h: ... here.

	* lib/dpkg.h (ARCHIVEVERSION, BUILDCONTROLDIR, EXTRACTCONTROLDIR)
	(BUILDOLDPKGFORMAT, OLDARCHIVEVERSION, OLDDEBDIR, OLDOLDDEBDIR)
	(MAXFIELDNAME, INTERPRETER_MAX): Move macros to ...
	* dpkg-deb/dpkg-deb.h: ... here.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (printforhelp): Move declaration to ...
	* lib/myopt.h: ... here.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h (trig_note_pend_core, trig_note_pend): Make trig
	argument const.
	* lib/triglib.c (trig_record_activation): Likewise.
	(trig_file_activate): Remove now unneeded cast in
	trig_record_activation call.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* lib/myopt.h (MAX_CONFIG_LINE): New macro.
	* lib/myopt.c (myfileopt): Use MAX_CONFIG_LINE instead of
	MAXDIVERTFILENAME.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (SHELL, SHELLENVIR): Remove unused macros.
	* src/main.h (check_libver): Remove unused prototype.

2009-01-04  Guillem Jover  <guillem@debian.org>

	* dselect/main.cc (findintable, dme, refreshmenu): Make static.
	* dselect/method.cc (sthfailed): Likewise.
	* dselect/pkgtop.cc (pkgprioritystring): Likewise.

2008-12-30  Guillem Jover  <guillem@debian.org>

	* lib/ehandle.c (badusage): Move function to ...