@@ -1,5 +1,10 @@
 2009-01-05  Guillem Jover  <guillem@debian.org>
 
+	* src/main.c (setobsolete): Use warning instead of fprintf call.
+	(setforce): Likewise.
+
+2009-01-05  Guillem Jover  <guillem@debian.org>
+
 	* man/start-stop-daemon.8: Clarify that the signal sent by default
 	is TERM not KILL.
 
